Add json support for form requests
