# pkg/models/user.go
@@ -40,10 +40,11 @@ type UserProfile struct {
 }
 
 type SignUpForm struct {
-	ClientID   string `form:"client_id" json:"client_id" validate:"required"`
-	Connection string `form:"connection" json:"connection" validate:"required"`
-	Email      string `form:"email" json:"email" validate:"required,email"`
-	Password   string `form:"password" json:"password" validate:"required"`
+	ClientID    string `form:"client_id" json:"client_id" validate:"required"`
+	Connection  string `form:"connection" json:"connection" validate:"required"`
+	Email       string `form:"email" json:"email" validate:"required,email"`
+	Password    string `form:"password" json:"password" validate:"required"`
+	RedirectUri string `query:"redirect_uri" form:"redirect_uri" json:"redirect_uri"`
 }
 
 type AuthorizeForm struct {
@@ -67,10 +68,16 @@ type AuthorizeLinkForm struct {
 }
 
 type LoginForm struct {
-	ClientID string `form:"client_id" validate:"required" json:"client_id"`
-	Email    string `form:"email" validate:"required,email" json:"email"`
-	Password string `form:"password" validate:"required" json:"password"`
-	Captcha  string `form:"captcha" json:"captcha"`
+	ClientID    string `form:"client_id" validate:"required" json:"client_id"`
+	Email       string `form:"email" validate:"required,email" json:"email"`
+	Password    string `form:"password" validate:"required" json:"password"`
+	Captcha     string `form:"captcha" json:"captcha"`
+	RedirectUri string `form:"redirect_uri" query:"redirect_uri"`
+}
+
+type LoginPageForm struct {
+	ClientID    string `form:"client_id" query:"client_id"`
+	RedirectUri string `form:"redirect_uri" query:"redirect_uri"`
 }
 
 func (a *User) MarshalLogObject(enc zapcore.ObjectEncoder) error {
