# pkg/route/token.go
@@ -15,14 +15,13 @@ type Token struct {
 	logger  *zap.Logger
 }
 
-func TokenInit(cfg Config) error {
+func InitToken(cfg Config) error {
 	route := &Token{
 		Manager: manager.NewTokenManager(cfg.Logger),
 		logger:  cfg.Logger,
 	}
 
 	cfg.Echo.GET("/token/refresh", route.TokenRefresh)
-	cfg.Echo.GET("/token/ott", route.TokenOTT)
 
 	return nil
 }
@@ -57,43 +56,6 @@ func (l *Token) TokenRefresh(ctx echo.Context) error {
 	}
 
 	token, e := l.Manager.Refresh(form)
-	if e != nil {
-		return helper.NewErrorResponse(ctx, http.StatusBadRequest, e.GetCode(), e.GetMessage())
-	}
-
-	return ctx.JSON(http.StatusOK, token)
-}
-
-func (l *Token) TokenOTT(ctx echo.Context) error {
-	form := new(models.OneTimeTokenForm)
-
-	if err := ctx.Bind(form); err != nil {
-		l.logger.Error("TokenOTT bind form failed", zap.Error(err))
-
-		return helper.NewErrorResponse(
-			ctx,
-			http.StatusBadRequest,
-			BadRequiredCodeCommon,
-			models.ErrorInvalidRequestParameters,
-		)
-	}
-
-	if err := ctx.Validate(form); err != nil {
-		l.logger.Error(
-			"TokenOTT bind validate failed",
-			zap.Object("OneTimeTokenForm", form),
-			zap.Error(err),
-		)
-
-		return helper.NewErrorResponse(
-			ctx,
-			http.StatusBadRequest,
-			fmt.Sprintf(BadRequiredCodeField, helper.GetSingleError(err).Field()),
-			models.ErrorRequiredField,
-		)
-	}
-
-	token, e := l.Manager.OTT(form)
 	if e != nil {
 		return helper.NewErrorResponse(ctx, http.StatusBadRequest, e.GetCode(), e.GetMessage())
 	}
